fix: body overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@
 
 body {
   font-family: JETSansDigital !important;
-  overflow-x: hidden;
+  overflow-x: scroll;
 }
 
 html {
